# psl-bench

./: Cargo.toml  Dockerfile  README.md  bench.sh  main.py  nom_psl.rs  psl.rs  publicsuffix.rs
cargo/: Cargo.toml  default.nix
cargo/benches/: bench.py  psl_benchmark.rs
docker/: Cargo.toml  Dockerfile  bench.sh  main.py  main.rs
src/: lib.rs
